commit init